[gd_scene load_steps=12 format=3 uid="uid://4tutreqq4nt3"]

[ext_resource type="Script" uid="uid://c5tamf0xc1pmn" path="res://scenes/GUI/game_main/topbar/gui_main_top_bar.gd" id="1_c4b7y"]
[ext_resource type="PackedScene" uid="uid://bv0vcudygflck" path="res://scenes/GUI/controls/buttons/gui_settings_button.tscn" id="1_yeg1i"]
[ext_resource type="PackedScene" uid="uid://cr44d8bn8fbex" path="res://scenes/GUI/game_main/topbar/gui_top_bar_player.tscn" id="2_dr26d"]
[ext_resource type="Texture2D" uid="uid://0weng6gyg3pu" path="res://resources/sprites/GUI/menu/top_bar_background.png" id="2_r78xp"]
[ext_resource type="PackedScene" uid="uid://d2m861kwkksmb" path="res://scenes/GUI/game_main/topbar/gui_action_points.tscn" id="4_h5xw3"]
[ext_resource type="PackedScene" uid="uid://c77qp4eia3sk6" path="res://scenes/GUI/game_main/topbar/gui_enemy_forecast_bar.tscn" id="5_g8b7e"]
[ext_resource type="PackedScene" uid="uid://dh8ucebm7pwrs" path="res://scenes/GUI/game_main/topbar/gui_enemy_process.tscn" id="5_jsal5"]
[ext_resource type="PackedScene" uid="uid://dekc88x4x655b" path="res://scenes/GUI/controls/buttons/gui_texture_button.tscn" id="5_q8xad"]
[ext_resource type="PackedScene" uid="uid://bng4n1p05v7f3" path="res://scenes/GUI/controls/buttons/gui_all_deck_button_old.tscn" id="6_14q81"]
[ext_resource type="Texture2D" uid="uid://78cwxae6uh0l" path="res://resources/sprites/icons/other/icon_board_view.png" id="6_ygd0y"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wcwo2"]
atlas = ExtResource("6_ygd0y")
region = Rect2(0, 0, 12, 12)

[node name="GUIMainTopBar" type="Control"]
process_mode = 3
custom_minimum_size = Vector2(0, 16)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
script = ExtResource("1_c4b7y")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_r78xp")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 0

[node name="Container" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="LeftContainer" type="HBoxContainer" parent="MarginContainer/Container"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -6.0
offset_right = 74.0
offset_bottom = 6.0
grow_vertical = 2
theme_override_constants/separation = 6

[node name="GUIActionPoints" parent="MarginContainer/Container/LeftContainer" instance=ExtResource("4_h5xw3")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4

[node name="GUITopBarPlayer" parent="MarginContainer/Container/LeftContainer" instance=ExtResource("2_dr26d")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4

[node name="GUIBoardViewButton" parent="MarginContainer/Container/LeftContainer" instance=ExtResource("5_q8xad")]
unique_name_in_owner = true
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
mouse_default_cursor_shape = 2
texture = SubResource("AtlasTexture_wcwo2")
texture_size = Vector2(12, 12)

[node name="CenterContainer" type="HBoxContainer" parent="MarginContainer/Container"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -6.0
offset_right = 23.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="LevelLabel" type="Label" parent="MarginContainer/Container/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"HUD"
theme_override_colors/font_color = Color(0.580392, 0.992157, 1, 1)
text = "level 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GUIEnemyProcess" parent="MarginContainer/Container/CenterContainer" instance=ExtResource("5_jsal5")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="RightContainer" type="HBoxContainer" parent="MarginContainer/Container"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -6.0
offset_bottom = 6.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 6
alignment = 1

[node name="GUIEnemyForecastBar" parent="MarginContainer/Container/RightContainer" instance=ExtResource("5_g8b7e")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4

[node name="GUIAllDeckButton" parent="MarginContainer/Container/RightContainer" instance=ExtResource("6_14q81")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4

[node name="GUISettingsButton" parent="MarginContainer/Container/RightContainer" instance=ExtResource("1_yeg1i")]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
